# Calculator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Calculator.hpp
src/: Calculator.cpp  MainWindow.cpp  MainWindow.h  main.cpp
